# BullseyecodeCPP

./: README.md
IPC/: CMakeLists.txt  build-coverage.bat  coverage-toolchain.cmake  main.cpp  qt-coverage-launcher.bat  test.cov
IPC/build-coverage/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  IPC.sln  IPC.vcxproj  IPC.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
IPC/build-coverage/Debug/: IPC.ilk
IPC/build-coverage/IPC.dir/Debug/: IPC.exe.recipe
IPC/build-coverage/IPC.dir/Debug/IPC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  IPC.lastbuildstate  cl.31944.write.1.tlog  link.31636.write.1.tlog  link.command.1.tlog  link.read.1.tlog
IPC/build-coverage/IPC_autogen/include_Debug/: main.moc  main.moc.d
IPC/build-coverage/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
IPC/build-coverage/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
IPC/build-coverage/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
IPC/build-coverage/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
